# entropy

./: README.md
3.1_data_sampling/: .gitignore  README.md  README_3.1.md
3.1_data_sampling/src/: .gitignore  set_buffer_size.service  set_buffer_size.sh
3.2-3.5_data_analysis/: IRQ analysis.ipynb  Instruction pointer analysis.ipynb  Jiffies analysis.ipynb  Timestamp analysis.ipynb  common_functions.py
3.2-3.5_data_analysis/data/: .gitignore  Makefile  moduntu_RPi_server32_trace_no-peri_23.01.19_17h.txt.tar.xz  moduntu_VM_server_trace_idle_22.12.13_9h.txt.tar.xz
3.2-3.5_data_analysis/models/: ip-conditional_freqs.csv  irq-conditional_freqs.csv
3.2_3.3_data_analysis/: Data field analysis.ipynb  Distribution finder.ipynb  Timing analysis.ipynb
3.2_3.3_data_analysis/data/: moduntu_RPi_server32_trace_no-wifi_23.01.18_14h.txt.tar.xz  (+4 more)
4.1.4_computational_approach_results/: Computational analysis.ipynb
4.1_computational_approach/: Makefile  README.md
4.2_statistical_approach/: .gitignore  README.md  Statistical analysis of data accumulation functions - 32 bits.ipynb  Statistical analysis of data accumulation functions - 64 bits.ipynb  main32.py  main64.py  output.csv  statistical_approach_notebook.ipynb
5.1_computational_approach/: Cargo.toml
5.1_computational_approach/interactive/: Makefile  test.py
5.1_computational_approach/src/: density.rs  hadamard.rs  lib.rs
5.1_computational_approach/src/distributions/: step.rs
5.1_computational_approach/src/functions/: mod.rs
5.2_computational_approach_results/: Computational analysis.ipynb
(+21 files in other folders)
