[package]
name = "entropy-gathering"
version = "0.1.0"
edition = "2021"
default-run="main"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
num = "0.4"
csv = "1.1"
plotters = "0.3.1"
rayon = "1.5"
rustfft = {version="6.1.0", features = ["avx", "sse", "neon"]}
nalgebra = "0.31.0"
lazy_static = "*"
ndarray = "*"
num-complex = "*"
coloured = { package = "colored", version = "*" }
